--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'org.jsoup:jsoup:1.11.1'
