--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,8 @@ android {
 }
 
 dependencies {
+
+    implementation "androidx.drawerlayout:drawerlayout:1.1.1"
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.cardview:cardview:1.0.0'
