--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,16 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name=".App"
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AlHamduLillah">
         <activity
             android:name=".SubhanActivity"
+            android:exported="false" />
+        <activity
+            android:name=".NoteDetailsActivity"
             android:exported="false" />
         <activity
             android:name=".NavigationActivity"
