Azan Service new permission Manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,8 @@
         <service
             android:name=".AzanService"
             android:enabled="true"
-            android:exported="true" />
+            android:exported="true"
+            android:process=":MegaLockerProcess"/>
     </application>
 
 </manifest>
